# Django-celery-boilerplate

./: .gitignore  Dockerfile  celerybeat-schedule  pyproject.toml  pytest.ini
app/: Untitled.ipynb
app/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
app/google-fetcher/: google_fetcher.py
app/management/commands/: email_report.py  fetch_google_data_command.py
app/mekan_com_fetcher/: mekan_com_fetcher.py
djangoproject/: celery.py  settings.py
djangoproject/google-fetch/: Untitled.ipynb
djangoproject/google-fetch/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
djangoproject/zillow/: scraping dog test.ipynb  zillow_crawler.py
djangoproject/zillow/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  scraping dog test-checkpoint.ipynb
tests/app/management/commands/: test_email_report.py
